--- a/proyectoFinal/package.json
+++ b/proyectoFinal/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "firebase-admin": "^11.0.1",
-    "mongoose": "^6.6.1"
+    "knex": "^2.3.0",
+    "mongoose": "^6.6.1",
+    "mysql": "^2.18.1"
   }
 }
