--- a/desafio/package.json
+++ b/desafio/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "dependencies": {
         "@faker-js/faker": "^7.5.0",
+        "bcrypt": "^5.1.0",
         "connect-mongo": "^4.6.0",
         "cookie-parser": "^1.4.6",
         "dotenv": "^16.0.2",
@@ -22,6 +23,8 @@
         "mongoose": "^6.6.1",
         "mysql": "^2.18.1",
         "normalizr": "^3.6.2",
+        "passport": "^0.6.0",
+        "passport-local": "^1.0.0",
         "pug": "^3.0.2",
         "socket.io": "^4.5.3"
     }
