--- a/desafio/package.json
+++ b/desafio/package.json
@@ -20,6 +20,7 @@
         "express-session": "^1.17.3",
         "firebase-admin": "^11.0.1",
         "knex": "^2.3.0",
+        "minimist": "^1.2.7",
         "mongoose": "^6.6.1",
         "mysql": "^2.18.1",
         "normalizr": "^3.6.2",
