--- a/desafio/.env
+++ b/desafio/.env
@@ -2,3 +2,4 @@ PERS="mongoDB"
 PORT=8080
 SECRET_KEY="1234567890!@#$%^&*()"
 MONGO_URL="mongodb+srv://Lautaro:batman123@cluster0.jfywafn.mongodb.net/sessions?retryWrites=true&w=majority"
+ENVIRONMENT=""
