--- a/desafio/.env
+++ b/desafio/.env
@@ -1,5 +1,4 @@
-PERS="firebase"
-PORT=8080
+PERS="mongoDB"
 SECRET_KEY="1234567890!@#$%^&*()"
 MONGO_URL="mongodb+srv://Lautaro:batman123@cluster0.jfywafn.mongodb.net/sessions?retryWrites=true&w=majority"
 ENVIRONMENT=""
