--- a/desafio/package.json
+++ b/desafio/package.json
@@ -6,7 +6,7 @@
   "main": "benchmark.js",
   "scripts": {
     "test": "node benchmark.js",
-    "start": "0x server.js"
+    "start": "server.js"
   },
   "author": "",
   "license": "ISC",
