--- a/desafio/package.json
+++ b/desafio/package.json
@@ -4,9 +4,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "benchmark.js",
-  "scripts": {
-    
-  },
+  "scripts": {},
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -23,11 +21,14 @@
     "log4js": "^6.7.0",
     "minimist": "^1.2.7",
     "mongoose": "^6.7.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.8.0",
     "normalizr": "^3.6.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pug": "^3.0.2",
-    "socket.io": "^4.5.3"
+    "socket.io": "^4.5.3",
+    "twilio": "^3.83.4"
   }
 }
